--- a/src/app/bloco-aula/bloco-aula-modal/bloco-aula-modal.component.html
+++ b/src/app/bloco-aula/bloco-aula-modal/bloco-aula-modal.component.html
@@ -63,6 +63,7 @@
     <mat-form-field appearance="outline">
         <mat-label>Sala Específica</mat-label>
         <mat-select [formControl]="salaEspecifica">
+            <mat-option>--</mat-option>
             <mat-option *ngFor="let sala of listaSalas" [value]="sala">{{
                 sala.nome
             }}</mat-option>
@@ -72,6 +73,7 @@
     <mat-form-field appearance="outline">
         <mat-label>Sala Atual</mat-label>
         <mat-select [formControl]="salaAtual">
+            <mat-option>--</mat-option>
             <mat-option *ngFor="let sala of listaSalas" [value]="sala">{{
                 sala.nome
             }}</mat-option>
