--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,12 @@
-<!-- <mat-toolbar color="primary">
- 
-    <div class="container-header">
-        <a
-            mat-button
-            routerLink="/usuarios"
-            [routerLinkActive]="usuarioSimplificado?.isAdmin ? 'active' : ''"
-            >Usuários</a
-        >
-        <a mat-button routerLink="/horarios" routerLinkActive="active"
-            >Horários</a
-        >
-        <a mat-button routerLink="/cursos" routerLinkActive="active">Cursos</a>
-        <a mat-button routerLink="/atributos" routerLinkActive="active"
-            >Atributos</a
-        >
-        <a mat-button routerLink="/grupo-salas" routerLinkActive="active"
-            >Agrupamento</a
-        >
-        <a mat-button routerLink="/salas" routerLinkActive="active">Salas</a>
-        <a mat-button routerLink="/blocos-aula" routerLinkActive="active"
-            >Aulas</a
-        >
+<div class="container-conteudo">
+    <div style="display: flex; margin-top: 20px">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title
+                    >Sistema de Gerência de Ensalamento</mat-card-title
+                >
+            </mat-card-header>
+            <img src="../assets/images/utf.png" alt="Logo Universidade" />
+        </mat-card>
     </div>
-</mat-toolbar> -->
-<h1 style="color: white; display: flex; justify-content: center">
-    Vai ter home?
-</h1>
+</div>
