--- a/src/app/sala/sala.component.html
+++ b/src/app/sala/sala.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="filtro-agrupamento" style="width: 20%">
             <mat-form-field appearance="outline">
-                <mat-label>Agrupamento</mat-label>
+                <mat-label>Agrupamentos</mat-label>
                 <mat-select [formControl]="filtroAgrupamento" multiple>
                     <mat-select-trigger>
                         <mat-chip-list>
