--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,14 +24,16 @@
     height: inherit;
 }
 
-.container-header a {
+.container-header a,
+.container-header .adm {
     display: inline-block;
     margin-right: 20px;
     font-size: 20px;
     text-align: center;
 }
 
-.container-header .rotas a:hover {
+.container-header .rotas a:hover,
+.container-header .adm:hover {
     color: white;
 }
 
