--- a/src/app/ensalamento/ensalamento.component.html
+++ b/src/app/ensalamento/ensalamento.component.html
@@ -3,30 +3,17 @@
         class="container-filtro"
         style="display: flex; justify-content: space-between"
     >
-        <div class="filtro-atributo" style="width: 50%">
+        <div class="filtro-sala" style="width: 50%">
             <mat-form-field style="width: 90%" appearance="outline">
-                <mat-label>Atributos</mat-label>
-                <mat-select [formControl]="filtroAtributos">
-                    <mat-option>--</mat-option>
-                    <!-- <mat-select-trigger>
-                        <mat-chip-list>
-                            <mat-chip
-                                *ngFor="let atributo of filtroAtributos.value"
-                            >
-                                {{ atributo["nome"] }}
-                            </mat-chip>
-                        </mat-chip-list>
-                    </mat-select-trigger> -->
+                <mat-label>Salas</mat-label>
+                <mat-select [formControl]="filtroSala">
                     <mat-option
-                        *ngFor="let atributo of listaAtributos"
-                        [value]="atributo"
-                        >{{ atributo.nome }}</mat-option
+                        *ngFor="let sala of listaSalas"
+                        [value]="sala"
+                        >{{ sala.nome }}</mat-option
                     >
                 </mat-select>
             </mat-form-field>
-        </div>
-        <div class="qtde-salas">
-            <p>Número de salas: {{ qtdeSalas }}</p>
         </div>
         <div class="filtro-button">
             <button (click)="filtrar()" mat-raised-button color="primary">
@@ -65,16 +52,12 @@
                 Segunda
             </th>
             <td
-                [ngStyle]="{
-                    'background-color': getColorFromRange(
-                        element.listaDetalhes[2].contagem
-                    )
-                }"
-                style="text-align: center; color: black"
+                style="text-align: center; color: white"
                 mat-cell
                 *matCellDef="let element"
             >
-                {{ element.listaDetalhes[2].contagem }}
+                {{ element.listaDetalhes[2].codigoDisciplina }} -
+                {{ element.listaDetalhes[2].turma }}
             </td>
         </ng-container>
 
@@ -87,16 +70,12 @@
                 Terça
             </th>
             <td
-                [ngStyle]="{
-                    'background-color': getColorFromRange(
-                        element.listaDetalhes[3].contagem
-                    )
-                }"
-                style="text-align: center; color: black"
+                style="text-align: center; color: white"
                 mat-cell
                 *matCellDef="let element"
             >
-                {{ element.listaDetalhes[3].contagem }}
+                {{ element.listaDetalhes[3].codigoDisciplina }} -
+                {{ element.listaDetalhes[3].turma }}
             </td>
         </ng-container>
 
@@ -109,16 +88,12 @@
                 Quarta
             </th>
             <td
-                [ngStyle]="{
-                    'background-color': getColorFromRange(
-                        element.listaDetalhes[4].contagem
-                    )
-                }"
-                style="text-align: center; color: black"
+                style="text-align: center; color: white"
                 mat-cell
                 *matCellDef="let element"
             >
-                {{ element.listaDetalhes[4].contagem }}
+                {{ element.listaDetalhes[4].codigoDisciplina }} -
+                {{ element.listaDetalhes[4].turma }}
             </td>
         </ng-container>
 
@@ -131,16 +106,12 @@
                 Quinta
             </th>
             <td
-                [ngStyle]="{
-                    'background-color': getColorFromRange(
-                        element.listaDetalhes[5].contagem
-                    )
-                }"
-                style="text-align: center; color: black"
+                style="text-align: center; color: white"
                 mat-cell
                 *matCellDef="let element"
             >
-                {{ element.listaDetalhes[5].contagem }}
+                {{ element.listaDetalhes[5].codigoDisciplina }} -
+                {{ element.listaDetalhes[5].turma }}
             </td>
         </ng-container>
 
@@ -158,39 +129,19 @@
                 Sexta
             </th>
             <td
-                [ngStyle]="{
-                    'background-color': getColorFromRange(
-                        element.listaDetalhes[6].contagem
-                    )
-                }"
                 style="
                     text-align: center;
                     padding-right: 0;
-                    color: black;
+                    color: white;
                     border-right: 0;
                 "
                 mat-cell
                 *matCellDef="let element"
             >
-                {{ element.listaDetalhes[6].contagem }}
+                {{ element.listaDetalhes[6].codigoDisciplina }} -
+                {{ element.listaDetalhes[6].turma }}
             </td>
         </ng-container>
-        <!-- <ng-container matColumnDef="media">
-            <th
-                style="width: 15%; text-align: center; padding-right: 0"
-                mat-header-cell
-                *matHeaderCellDef
-            >
-                Média
-            </th>
-            <td
-                style="text-align: center; padding-right: 0"
-                mat-cell
-                *matCellDef="let element"
-            >
-                {{ element.media }}
-            </td>
-        </ng-container> -->
 
         <tr
             mat-header-row
